--- a/styles/Util.module.scss
+++ b/styles/Util.module.scss
@@ -4,6 +4,12 @@
   align-items: center;
 }
 
+.flexSpaceBetween {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .flexInlinCenter {
   display: inline-flex;
   justify-content: center;
@@ -17,8 +23,16 @@
   align-items: center;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .ableButton {
   background-color: white;
+}
+
+.hidden {
+  display: none;
 }
 
 .disabledClickButton {
@@ -83,4 +97,30 @@
   min-height: 25px;
   display: flex;
   align-items: center;
+}
+
+.burgerButtonContainer {
+  border: none;
+  width: 40px;
+  position: absolute;
+  right: 8vw;
+  top: 30px;
+  z-index: 100;
+  border: 1px solid black;
+  height: 40px;
+  border-radius: 100%;
+  background-color: white;
+
+  div {
+    border-bottom: 1px solid black;
+    width: 100%;
+    margin: 2px 0px;
+  }
+
+  &:hover {
+    border: 1px solid #22bad9;
+    div {
+      border-bottom: 1px solid #22bad9;
+    }
+  }
 }
