--- a/styles/GNB.module.scss
+++ b/styles/GNB.module.scss
@@ -26,10 +26,11 @@
   background-color: white;
   border-bottom: 1px solid #efeff0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
+  height: calc(20px + 20px + 3vw + 1vw);
+  padding: 0 4vw;
 
   & > div:first-child {
     margin: 10px 0;
@@ -44,5 +45,32 @@
   h4 {
     font-size: 1vw;
     margin: 0;
+  }
+}
+
+.burgerButtonContainer {
+  border: none;
+  width: 4vw;
+  height: 4vw;
+  min-width: 40px;
+  min-height: 40px;
+  border: 1px solid white;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+  div {
+    border-bottom: 0.2vw solid black;
+    width: 100%;
+    margin: 2px 0px;
+    transition: all 0.15s ease-in-out;
+  }
+
+  &:hover {
+    div {
+      border-bottom: 0.2vw solid #22bad9;
+    }
   }
 }
