--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -1,30 +1,6 @@
 .profileContainer {
-  position: absolute;
-  right: 8vw;
-  top: 12px;
-  display: flex;
-  border: 1px solid #efeff0;
-  padding: 0.2rem 0.6rem;
-  border-radius: 12px;
-  transition: all 0.3s ease-in-out;
-
-  & > div:nth-child(2) {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-left: 14px;
-  }
-
-  h2,
-  h3 {
-    margin: 0;
-    padding: 0;
-  }
-
-  &:hover {
-    border: 1px solid black;
-  }
+  height: fit-content;
+  position: relative;
 }
 
 .profileImage {
