--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -1,15 +1,17 @@
 .profileContainer {
   height: fit-content;
-  position: relative;
+  border: 1px solid #efeff0;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    border: 1px solid #22bad9;
+  }
 }
 
 .profileImage {
-  border: 1px solid #efeff0 !important;
   border-radius: 100%;
-}
-
-.profileWrapper {
-  position: relative;
 }
 
 @keyframes slideIn {
