[Add] Profile Popup - 프로필 사진 클릭시 프로필,로그아웃, 글쓰기 메뉴 등장

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -1,5 +1,6 @@
 .profileContainer {
   height: fit-content;
+  position: relative;
   border: 1px solid #efeff0;
   border-radius: 100%;
   cursor: pointer;
@@ -12,6 +13,23 @@
 
 .profileImage {
   border-radius: 100%;
+}
+
+.popupProfileText {
+  width: 100%;
+  background-color: white;
+  & > span {
+    width: 8vw;
+    text-align: center;
+    font-size: 1vw;
+    padding: 0px 1vw;
+    border-radius: 2px;
+
+    &:hover {
+      color: #22bad9;
+      background-color: #efeff0;
+    }
+  }
 }
 
 @keyframes slideIn {
