--- a/styles/Util.module.scss
+++ b/styles/Util.module.scss
@@ -98,3 +98,12 @@
   display: flex;
   align-items: center;
 }
+
+.noBorder {
+  border: 1px solid white;
+  transition: all 0.5s ease in-out;
+
+  &:hover {
+    border: 1px solid #22bad9;
+  }
+}
