--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -1,5 +1,5 @@
 .categoryContainer {
-  width: 100%;
+  width: 92%;
   font-size: 1.3vw;
   margin: 2vh 0;
 
@@ -9,10 +9,15 @@
     height: 100%;
     border: 0.5px solid white;
     background-color: white;
+  }
 
-    option {
-      border: 1px solid white;
-      background-color: white;
+  @media screen and (max-width: 600px) {
+    display: flex;
+    flex-direction: column;
+    font-size: 4vw;
+
+    select {
+      font-size: 4vw;
     }
   }
 }
