--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -1,14 +1,27 @@
 .categoryContainer {
-  width: 92%;
-  font-size: 1.3vw;
+  width: 100%;
+  font-size: 2vw;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
   margin: 2vh 0;
 
+  input {
+    font-size: 2vw;
+  }
+
   select {
-    font-size: 1.3vw;
+    font-size: 2vw;
 
     height: 100%;
     border: 0.5px solid white;
     background-color: white;
+  }
+
+  button {
+    width: 10vw;
+    margin: 0px;
+    font-size: 1.6vw;
   }
 
   @media screen and (max-width: 600px) {
@@ -18,6 +31,10 @@
 
     select {
       font-size: 4vw;
+    }
+
+    button {
+      display: none;
     }
   }
 }
