--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -1,18 +1,18 @@
 .categoryContainer {
   width: 100%;
-  font-size: 2vw;
+  font-size: 150%;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 2vh 0;
 
   input {
-    font-size: 2vw;
+    font-size: 150%;
   }
 
   select {
-    font-size: 2vw;
-
+    font-size: 150%;
     height: 100%;
     border: 0.5px solid white;
     background-color: white;
