--- a/styles/Upload.module.scss
+++ b/styles/Upload.module.scss
@@ -11,3 +11,34 @@
     }
   }
 }
+
+.imagePickerWrapper {
+  margin: 2vh 0px;
+
+  & > span {
+    font-size: 18px;
+  }
+
+  ul {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    height: 60px;
+    border: 1px solid black;
+    padding: 0;
+    overflow: scroll;
+    text-decoration: none;
+    list-style: none;
+
+    li {
+      border: 3px solid white;
+      width: 40px;
+      height: 40px;
+      margin: 5px 10px 5px 0px;
+
+      &:first-child {
+        margin-left: 10px;
+      }
+    }
+  }
+}
