[Add] 임시저장 게시글 > CRU

--- a/styles/Category.module.scss
+++ b/styles/Category.module.scss
@@ -9,6 +9,7 @@
 
   input {
     font-size: 22px;
+    max-width: 10vw;
     border: 1px solid white;
     &:focus {
       border: 1px solid black;
