--- a/styles/TempPost.module.scss
+++ b/styles/TempPost.module.scss
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   width: fit-content;
-  width: 200px;
+  width: 224px;
 
   @media screen and (max-width: 600px) {
     width: 100%;
@@ -28,18 +28,50 @@
 
     & > li {
       border: 1px solid white;
-      width: 100%;
+      width: 99%;
       display: inline-flex;
       justify-content: center;
       align-items: center;
       white-space: nowrap;
       text-overflow: ellipsis;
-      padding: 8px 0px;
+
+      cursor: pointer;
+
+      & > div {
+        padding: 8px 4px;
+        width: 99%;
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & > button {
+          font-size: 20px;
+          &:hover {
+            color: $font-color-main;
+          }
+        }
+
+        & > span {
+          width: 180px;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+          transition: all 0.2s ease-in-out;
+
+          &:hover {
+            white-space: pre-wrap;
+            color: $font-color-main;
+          }
+        }
+      }
 
       &:hover {
         border-top: 1px solid $back-color-main;
         border-bottom: 1px solid $back-color-main;
-        color: $font-color-main;
+
+        &:last-child {
+          border-bottom: 1px solid white;
+        }
       }
     }
   }
