--- a/styles/Util.module.scss
+++ b/styles/Util.module.scss
@@ -34,6 +34,10 @@ $delayandduration: 4;
   background-color: white;
 }
 
+.isActiveColor {
+  color: $font-color-main;
+}
+
 .hidden {
   display: none;
 }
