--- a/styles/Util.module.scss
+++ b/styles/Util.module.scss
@@ -141,6 +141,18 @@ $delayandduration: 4;
   border-radius: 12px;
   background-color: white;
 
+  & > span {
+    &:first-child {
+      font-weight: bold;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+    &:nth-child(2) {
+      font-weight: 400;
+      font-size: 13px;
+    }
+  }
+
   & > div {
     display: flex;
     margin-top: 20px;
