--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -1,12 +1,35 @@
 .userContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid black;
+  max-width: 860px;
+  width: 95%;
 }
 
 .userInfoWrapper {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-evenly;
   width: 100%;
+
+  & > button {
+    width: 94px;
+    height: 30px;
+  }
+}
+
+.userInfoBioWrapper {
+  display: flex;
+  flex-direction: column;
+
+  & > a {
+    color: $font-color-main;
+
+    &:hover {
+      color: $back-color-main;
+    }
+  }
 }
 
 .userImageWrapper {
