--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -3,6 +3,10 @@
   max-width: 1024px;
   width: 100%;
   margin-top: 44px;
+
+  @media screen and (max-width: $media-standard) {
+    margin-top: 0px;
+  }
 }
 .userContainer {
   display: flex;
@@ -27,14 +31,24 @@
     width: 94px;
     height: 30px;
   }
+
+  @media screen and (max-width: $media-standard) {
+    padding-bottom: 20px;
+    border-bottom: 1px solid $back-color-main;
+  }
 }
 
 .userInfoWrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   & > div:nth-child(2) {
     margin-left: 50px;
+
+    @media screen and (max-width: $media-standard) {
+      justify-content: center;
+      margin-left: 12px;
+    }
   }
 }
 
@@ -47,6 +61,21 @@
 
     &:hover {
       color: $back-color-main;
+    }
+  }
+
+  @media screen and (max-width: $media-standard) {
+    width: $userpage-profile-size / 1.4;
+    height: $userpage-profile-size / 1.4;
+    h4,
+    h2 {
+      margin: 0px;
+    }
+    a {
+      width: 114px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
@@ -66,15 +95,15 @@
   }
 
   & > input {
-    background: transparent;
-    background-color: transparent;
-    opacity: 0;
     position: absolute;
-    border: 1px solid white;
     right: 0px;
     bottom: 0px;
     height: $userpage-profile-size;
     width: $userpage-profile-size/2;
+    background: transparent;
+    background-color: transparent;
+    opacity: 0;
+    border: 1px solid white;
     border-bottom-right-radius: $userpage-profile-size * 2;
     border-top-right-radius: $userpage-profile-size * 2;
     width: $userpage-profile-size/2;
@@ -92,10 +121,15 @@
     border-top-left-radius: $userpage-profile-size * 2;
     left: 0px;
   }
+
+  @media screen and (max-width: $media-standard) {
+    width: $userpage-profile-size / 1.4;
+    height: $userpage-profile-size / 1.4;
+  }
 }
 
 .userContentsContainer {
-  margin-top: 116px;
+  margin-top: 24px;
   display: flex;
   justify-content: space-between;
 }
@@ -186,7 +220,7 @@
         span {
           color: $back-color-main;
           visibility: visible;
-          background-color: rgba(0, 0, 0, 0.5);
+          background-color: $blur-color;
 
           @media screen and (max-width: 735px) {
             width: 124px;
@@ -259,4 +293,77 @@
     min-height: calc(293px * 3 + 28px * 3);
     font-size: 52px;
   }
+}
+
+.userJoinCrewContainer {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  margin-top: 24px;
+  align-items: stretch;
+  flex-direction: column;
+
+  & > ul {
+    display: flex;
+
+    & > li {
+      margin-right: -20px;
+      position: relative;
+      border: 1px solid transparent;
+      border-radius: 100%;
+      transition: all 0.3s ease-in-out;
+      & > a {
+        & > span {
+          position: absolute;
+          top: 0px;
+          visibility: hidden;
+        }
+      }
+
+      &:hover {
+        margin-right: 5px;
+        border: 1px solid $font-color-main;
+        & > a {
+          & > span {
+            width: 120px;
+            visibility: visible;
+            top: 50px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 735px) {
+      & > li {
+        margin-right: 12px;
+
+        & > a {
+          & > span {
+            position: absolute;
+            visibility: visible;
+            width: 60px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            top: 50px;
+          }
+        }
+
+        &:hover {
+          margin-right: 0px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 735px) {
+    margin-top: 8px;
+  }
+}
+
+.userJoinCrewImage {
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  overflow: hidden;
 }
