--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -207,7 +207,7 @@
     }
 
     & > a {
-      span {
+      div {
         top: 0px;
         left: 0px;
         position: absolute;
@@ -217,7 +217,11 @@
 
     &:hover {
       & > a {
-        span {
+        div {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
           color: $back-color-main;
           visibility: visible;
           background-color: $blur-color;
