--- a/styles/CommentBox.module.scss
+++ b/styles/CommentBox.module.scss
@@ -49,7 +49,7 @@
     white-space: pre-line;
   }
   & > textarea {
-    height: 40px;
+    min-height: 40px;
     min-width: calc(100% - 80px - 10vw);
     resize: vertical;
   }
