--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -185,95 +185,6 @@
   width: fit-content;
 }
 
-.userContentsList {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin: 0px;
-  padding: 0px;
-
-  & > li {
-    position: relative;
-    border: 1px solid black;
-
-    &:nth-child(3n) {
-      margin-right: 0px;
-    }
-
-    image {
-      width: 100%;
-      height: 100%;
-    }
-
-    & > a {
-      .hiddenContentsTitle {
-        top: 0px;
-        left: 0px;
-        position: absolute;
-        visibility: hidden;
-      }
-    }
-
-    &:hover {
-      & > a {
-        .hiddenContentsTitle {
-          visibility: visible;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          color: $back-color-main;
-          background-color: $blur-color;
-
-          @media screen and (max-width: 735px) {
-            width: 124px;
-            height: 124px;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          @media screen and (min-width: 736px) {
-            width: 293px;
-            height: 293px;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-
-            font-size: 20px;
-          }
-        }
-      }
-    }
-
-    @media screen and (max-width: 735px) {
-      margin-right: 3px;
-      margin-bottom: 3px;
-      width: 124px;
-      height: 124px;
-    }
-
-    @media screen and (min-width: 736px) {
-      margin-right: 28px;
-      margin-bottom: 28px;
-      width: 293px;
-      height: 293px;
-    }
-  }
-
-  @media screen and (max-width: 735px) {
-    min-width: calc(124px * 3 + 3px * 2);
-    min-height: calc(124px * 3 + 3px * 3);
-  }
-
-  @media screen and (min-width: 736px) {
-    min-width: calc(293px * 3 + 28px * 2);
-    max-width: calc(293px * 3 + 28px * 2 + 6px);
-    min-height: calc(293px * 3 + 28px * 3);
-  }
-}
-
 .isActive {
   border-right: 1px solid $font-color-main !important;
   color: $font-color-main !important;
@@ -498,4 +409,25 @@
   filter: blur(0.7px);
   padding: 12px 20px;
   width: calc(293px * 3);
+}
+
+.categoryAllPostButton {
+  display: inline-flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 24px;
+  cursor: pointer;
+
+  svg {
+    margin: 0px 8px;
+  }
+
+  &:hover {
+    color: $font-color-main;
+  }
+}
+
+.contentsSection {
+  display: flex;
+  flex-direction: column;
 }
