[Add] User > 9개 이상 글 Pagination

--- a/styles/user/UserPage.module.scss
+++ b/styles/user/UserPage.module.scss
@@ -80,3 +80,13 @@
   position: absolute;
   visibility: hidden;
 }
+
+.seeMoreButton {
+  display: inline-flex;
+  justify-content: center;
+  width: 100%;
+
+  & > svg {
+    height: 32px;
+  }
+}
