--- a/styles/user/component/UserContentsBlockType.module.scss
+++ b/styles/user/component/UserContentsBlockType.module.scss
@@ -21,16 +21,16 @@
         background-color: $blur-color;
 
         @media screen and (max-width: 735px) {
-          width: 124px;
-          height: 124px;
+          width: 100%;
+          height: 100%;
           display: inline-flex;
           justify-content: center;
           align-items: center;
         }
 
         @media screen and (min-width: 736px) {
-          width: 293px;
-          height: 293px;
+          width: 100%;
+          height: 100%;
           display: inline-flex;
           justify-content: center;
           align-items: center;
