--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -80,6 +80,21 @@
   }
 }
 
+.userInfoModifyButtonWrapper {
+  display: flex;
+
+  & > input {
+    height: 24px;
+    margin: 5px 0px;
+  }
+
+  & > button {
+    height: 30px;
+    margin: 5px 0px;
+    margin-left: 8px;
+  }
+}
+
 .userImageWrapper {
   position: relative;
   display: flex;
