--- a/styles/common/PageDivider.module.scss
+++ b/styles/common/PageDivider.module.scss
@@ -1,13 +1,15 @@
 .wrapper {
   display: flex;
   align-items: center;
+  font-size: 20px;
+  margin-bottom: 12px;
 
-  & > li {
-    margin: 12px;
-    font-size: 20px;
+  & > div {
+    width: 18px;
+    margin: 0px 12px;
+  }
 
-    &:hover {
-      color: $font-color-main;
-    }
+  & > svg {
+    margin: 0px 12px;
   }
 }
