[Modify] User > Contents > PlainType - css 수정

--- a/styles/user/component/UserContentsPlainType.module.scss
+++ b/styles/user/component/UserContentsPlainType.module.scss
@@ -1,3 +1,68 @@
+.userContentsPlainList {
+  min-height: calc(293px * 3);
+
+  & > li {
+    width: calc(293px * 3);
+    border: 1px solid $back-color-main;
+    border-radius: 20px;
+    margin-bottom: 12px;
+
+    & > a {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+
+      // & > div {
+      //   &:first-child {
+      //     width: 100%;
+
+      //     display: flex;
+      //     justify-content: space-between;
+      //     align-items: flex-end;
+
+      //     & > div {
+      //       margin: 0.83em 0px;
+
+      //       & > span:nth-child(2) {
+      //         margin-left: 12px;
+      //       }
+      //     }
+      //   }
+      // }
+    }
+
+    @media screen and (max-width: 735px) {
+      min-width: calc(124px * 3 + 3px * 2);
+      max-width: calc(124px * 3 + 3px * 2 + 6px);
+
+      h2 {
+        text-decoration: none;
+        font-size: 16px;
+      }
+    }
+
+    @media screen and (min-width: 736px) {
+      min-width: calc(293px * 3 + 28px * 2);
+      max-width: calc(293px * 3 + 28px * 2 + 6px);
+    }
+
+    &:hover {
+      border: 1px solid $font-color-main;
+    }
+  }
+
+  @media screen and (max-width: 735px) {
+    min-width: calc(3 * 124px - 20px);
+    min-height: calc(3 * 124px);
+  }
+
+  @media screen and (min-width: 736px) {
+    min-width: calc(3 * 316px);
+    min-height: calc(3 * 316px);
+  }
+}
+
 .contentBlinder {
   height: 150px;
   overflow: hidden;
@@ -5,5 +70,46 @@
   // background-color: $blur-color;
   filter: blur(0.7px);
   padding: 12px 20px;
-  width: calc(293px * 3);
+}
+
+.plainContent {
+  display: inline-block;
+  width: 88vw;
+  height: 64px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.titleWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 96%;
+
+  & > h2 {
+    height: 100%;
+    width: 184px;
+
+    @media screen and (max-width: 735px) {
+      width: 184px;
+    }
+
+    @media screen and (min-width: 736px) {
+      width: 324px;
+    }
+
+    text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  & > div {
+    height: 100%;
+
+    & > span {
+      font-size: 8px;
+    }
+  }
 }
