[Add] UserProfile > Icon, Modal 추가 - text > icon으로 변경 - 프로필 정보 수정 시 모달 생성으로 변경

--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -70,6 +70,10 @@
     h4,
     h2 {
       margin: 0px;
+      width: 114px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
     a {
       width: 114px;
@@ -303,7 +307,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   height: 100%;
 
   & > button {
