[Add] Crew Page Init - 기본 디자인 - 업로드를 위한 개별 페이지 생성

--- a/styles/user/UserPage.module.scss
+++ b/styles/user/UserPage.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
 
   @media screen and (max-width: 735px) {
-    // min-width: calc(124px * 3 + 3px * 2);
+    min-width: calc(124px * 3 + 3px * 2);
     min-height: calc(124px * 3 + 3px * 3);
   }
 
