--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -1,7 +1,5 @@
 .container {
   width: 100%;
-  max-width: 1024px;
-  width: 100%;
   margin-top: 44px;
 
   @media screen and (max-width: $media-standard) {
@@ -240,59 +238,59 @@
 
   & > ul {
     display: flex;
+  }
 
-    & > li {
-      margin-right: -20px;
-      position: relative;
-      border: 1px solid transparent;
-      border-radius: 100%;
-      transition: all 0.3s ease-in-out;
-      & > a {
-        & > span {
-          position: absolute;
-          top: 0px;
-          visibility: hidden;
-        }
-      }
+  @media screen and (max-width: 735px) {
+    margin-top: 8px;
+  }
+}
 
-      &:hover {
-        margin-right: 5px;
-        border: 1px solid $font-color-main;
-        & > a {
-          & > span {
-            width: 120px;
-            visibility: visible;
-            top: 50px;
-          }
-        }
-      }
+.userJoinCrewWrapper {
+  margin-right: -20px;
+  position: relative;
+  border: 1px solid $back-color-main;
+  border-radius: 100%;
+  transition: all 0.3s ease-in-out;
+
+  & > a {
+    & > span {
+      position: absolute;
+      top: 0px;
+      visibility: hidden;
     }
+  }
 
-    @media screen and (max-width: 735px) {
-      & > li {
-        margin-right: 12px;
+  &:hover {
+    margin-right: 5px;
+    border: 1px solid $font-color-main;
 
-        & > a {
-          & > span {
-            position: absolute;
-            visibility: visible;
-            width: 60px;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-            top: 50px;
-          }
-        }
-
-        &:hover {
-          margin-right: 0px;
-        }
+    & > a {
+      & > span {
+        width: 120px;
+        visibility: visible;
+        top: 50px;
       }
     }
   }
 
   @media screen and (max-width: 735px) {
-    margin-top: 8px;
+    margin-right: 12px;
+
+    & > a {
+      & > span {
+        position: absolute;
+        visibility: visible;
+        width: 60px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        top: 50px;
+      }
+    }
+
+    &:hover {
+      margin-right: 0px;
+    }
   }
 }
 
