--- a/styles/crew/CrewProfile.module.scss
+++ b/styles/crew/CrewProfile.module.scss
@@ -6,6 +6,8 @@
   background-position: center;
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid $back-color-main;
+  margin-bottom: 20px;
 }
 
 .infoContainer {
