--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -4,6 +4,11 @@
 
 .joinedPeopleContaier {
   width: 100%;
+
+  & > h4 {
+    font-size: 24px;
+  }
+
   & > ul {
     display: flex;
   }
@@ -22,5 +27,22 @@
     &:hover {
       border: 1px solid $font-color-main;
     }
+  }
+}
+
+.crewNoticeContainer {
+  margin-top: 48px;
+}
+
+.noticeWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+
+  & > div {
+    display: flex;
+  }
+
+  & > span {
   }
 }
