--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -133,9 +133,54 @@
 }
 
 .crewOutfitContentsContainer {
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.crewOutfitContentsWrapper {
+  display: grid;
+  grid-template-rows: repeat(4, 11.6vw);
+  grid-template-columns: repeat(5, calc((100% - 12px - 0.1vw * 4) / 5));
+  row-gap: 0.4vw;
+  column-gap: 0.4vw;
   width: 100%;
   margin-left: 12px;
+
+  & > li {
+    position: relative;
+    border: 1px solid $back-color-main;
+    & > a {
+      & > div:last-child {
+        visibility: hidden;
+        position: absolute;
+        top: 0px;
+      }
+    }
+    &:hover {
+      & > a {
+        & > div:last-child {
+          display: inline-flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+          background-color: $blur-color;
+          visibility: visible;
+          & > span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 80px;
+            color: $font-color-main;
+            display: block;
+          }
+          // z-index: 10;
+        }
+      }
+    }
+  }
 }
 
 .crewOutfitToggleButtonWrapper {
@@ -143,7 +188,33 @@
   flex-direction: column;
 
   & > button {
+    height: 50%;
     min-height: 360px;
-    border: 1px solid red;
+    padding: 0px 1rem;
+    color: $back-color-main;
+    border-right: 1px solid $back-color-main;
+  }
+}
+
+.isActive {
+  color: $font-color-main !important;
+  border-right: 1px solid $font-color-main !important;
+}
+
+.gridImage {
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+  & > div {
+    position: unset !important;
+    height: 100%;
+
+    & > img {
+      object-fit: contain;
+      width: 100% !important;
+      height: 100%;
+      position: relative !important;
+      height: unset !important;
+    }
   }
 }
