--- a/styles/user/UserPage.module.scss
+++ b/styles/user/UserPage.module.scss
@@ -18,6 +18,8 @@
   display: grid;
   grid-template-rows: repeat(3, 27vw);
   grid-template-columns: repeat(3, 27vw);
+  row-gap: 1vw;
+  column-gap: 1vw;
 
   @media screen and (max-width: 735px) {
     grid-template-rows: repeat(3, 110px);
@@ -33,8 +35,6 @@
 .userContentsEachBlock {
   position: relative;
   border: 1px solid black;
-  margin-right: 12px;
-  margin-bottom: 12px;
 
   image {
     width: 100%;
