--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -69,7 +69,11 @@ $delayandduration: 4;
   min-height: calc(100vh - 200px - 25px);
   //min-height: calc(100vh + 20px);
   max-width: 1024px;
-  padding: 0 4vw;
+  padding: 0px 4vw;
+
+  @media screen and (max-width: 735px) {
+    padding: 0px 1vw;
+  }
 }
 
 .flexCenter {
