--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -10,7 +10,12 @@
   }
 
   & > ul {
+    // height: calc(100% + 20px);
     display: flex;
+    overflow-x: auto;
+    //임시가림
+    overflow-y: hidden;
+    white-space: nowrap;
   }
 
   // border: 1px solid black;
@@ -43,6 +48,15 @@
     & > ul {
       min-height: 444px;
       width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 735px) {
+    & > div {
+      & > ul {
+        min-height: 244px;
+        width: 100%;
+      }
     }
   }
 }
@@ -139,6 +153,11 @@
 
 .crewOutfitContainer {
   margin-top: 48px;
+  margin-bottom: 48px;
+  @media screen and (max-width: 735px) {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
 }
 
 .crewOutfitWrapper {
@@ -153,8 +172,9 @@
 
 .crewOutfitContentsWrapper {
   display: grid;
-  grid-template-rows: repeat(4, 11.6vw);
-  grid-template-columns: repeat(5, calc((100% - 12px - 0.1vw * 4) / 5));
+  // min-height: calc(15.6vw * 3 + 12px * 3 + 0.4vw * 2);
+  grid-template-rows: repeat(3, 15.6vw);
+  grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
   row-gap: 0.4vw;
   column-gap: 0.4vw;
   width: 100%;
@@ -194,6 +214,15 @@
       }
     }
   }
+
+  @media screen and (max-width: 735px) {
+    grid-template-rows: repeat(3, 32.6vw);
+    grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
+    row-gap: 0.4vw;
+    column-gap: 0.4vw;
+    width: 100%;
+    margin-left: 12px;
+  }
 }
 
 .crewOutfitToggleButtonWrapper {
@@ -206,6 +235,14 @@
     padding: 0px 1rem;
     color: $back-color-main;
     border-right: 1px solid $back-color-main;
+  }
+
+  @media screen and (max-width: 735px) {
+    & > button {
+      // padding: 0px 0.5vw;
+      // width: 3vw;
+      min-height: 50%;
+    }
   }
 }
 
