--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,6 @@
 $font-color-main: #22bad9;
 $back-color-main: #efeff0;
-$media-standard: 735px;
+$media-phone: 735px;
+$media-tablet: 1024px;
 $blur-color: rgba(0, 0, 0, 0.5);
 $userpage-profile-size: 120px;
