[Modify] Crew OOTD > 반응형(휴대폰)

--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -155,7 +155,12 @@
   margin-top: 48px;
   margin-bottom: 48px;
 
-  @media screen and (max-width: 735px) {
+  @media screen and (max-width: $media-tablet) {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  @media screen and (max-width: $media-phone) {
     margin-top: 12px;
     margin-bottom: 12px;
   }
@@ -163,6 +168,7 @@
 
 .crewOutfitWrapper {
   display: flex;
+  justify-content: space-between;
 }
 
 .crewOutfitContentsContainer {
@@ -178,10 +184,8 @@
   grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
   row-gap: 0.4vw;
   column-gap: 0.4vw;
-  width: 100%;
-  margin: 0px 0px 12px 12px;
-  // margin-left: 12px;
-  // margin-bottom: 12px;
+
+  // margin: 0px 0px 12px 12px;
 
   & > li {
     position: relative;
@@ -208,7 +212,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
-            width: 80px;
+            width: 8vw;
             color: $font-color-main;
             display: block;
           }
@@ -218,22 +222,22 @@
     }
   }
 
-  @media screen and (max-width: $media-phone) {
-    grid-template-rows: repeat(3, 32.6vw);
-    grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
-    row-gap: 0.4vw;
-    column-gap: 0.4vw;
-    width: 100%;
-    margin-left: 12px;
-  }
-
   @media screen and (max-width: $media-tablet) {
     grid-template-rows: repeat(3, 32.6vw);
-    grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
-    row-gap: 0.4vw;
-    column-gap: 0.4vw;
+    grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 0.1vw * 3));
+    row-gap: 0.1vw;
+    column-gap: 0.1vw;
     width: 100%;
-    margin-left: 12px;
+  }
+
+  @media screen and (max-width: $media-phone) {
+    // grid-template-rows: repeat(3, 20.6vw);
+    grid-template-rows: repeat(auto-fill, minmax(110px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
+
+    // grid-template-columns: repeat(3, 20.6vw);
+    row-gap: 0.1vw;
+    column-gap: 0.1vw;
   }
 }
 
