--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -46,7 +46,9 @@ $delayandduration: 4;
 
 .imageSmallCircleContainer {
   width: 100%;
+  height: 100%;
   max-width: 60px;
+  max-height: 60px;
   border-radius: 100%;
   overflow: hidden;
 
