--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -329,3 +329,13 @@ $delayandduration: 4;
     }
   }
 }
+
+.noStory {
+  font-size: 3rem;
+  width: 100%;
+  height: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2vw 0px;
+}
