--- a/styles/crew/CrewProfile.module.scss
+++ b/styles/crew/CrewProfile.module.scss
@@ -73,3 +73,16 @@
     }
   }
 }
+
+.linkWrapper {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
