--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -286,3 +286,13 @@
     }
   }
 }
+
+.crewIntroductionContainer {
+  & > h4 {
+    font-size: 24px;
+    margin-bottom: 12px;
+  }
+  & > span {
+    font-size: 16px;
+  }
+}
