--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -382,12 +382,21 @@ $delayandduration: 4;
 
 .modalButtonWrapper {
   display: flex;
+  flex-direction: column;
+  margin-top: 12px;
 
-  & > button {
-    margin: 0px;
-
+  & > div {
+    display: flex;
     &:first-child {
-      margin-right: 4px;
+      margin-bottom: 4px;
+    }
+
+    & > button {
+      margin: 0px;
+
+      &:first-child:not(:last-child) {
+        margin-right: 4px;
+      }
     }
   }
 }
