--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -296,3 +296,14 @@
     font-size: 16px;
   }
 }
+
+.modifyImageContainer {
+  & > div {
+    & > button {
+      margin: 4px 0px;
+    }
+    & > input {
+      display: none;
+    }
+  }
+}
