[Modify] User Block Type > 반응형 - Crew OOTD와 같은 레이아웃으로 css나중에 통합 필요

--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -200,7 +200,10 @@
 }
 
 .userContentsWrapper {
-  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .isActive {
