--- a/styles/user/component/UserContentsBlockType.module.scss
+++ b/styles/user/component/UserContentsBlockType.module.scss
@@ -1,46 +1,108 @@
-.userContentsEachBlock {
-  position: relative;
-  border: 1px solid black;
-  margin-right: 12px;
-  margin-bottom: 12px;
+.userContentsBlockList {
+  display: grid;
+  // min-height: calc(15.6vw * 3 + 12px * 3 + 0.4vw * 2);
+  grid-template-rows: repeat(3, 21vw);
+  grid-template-columns: repeat(3, calc((100% - 12px - 0.1vw * 2) / 3));
+  row-gap: 0.4vw;
+  column-gap: 0.4vw;
 
-  image {
-    width: 100%;
-    height: 100%;
-  }
+  // margin: 0px 0px 12px 12px;
 
-  &:hover {
+  & > li {
+    position: relative;
+    border: 1px solid $back-color-main;
     & > a {
-      .hiddenContentsTitle {
-        visibility: visible;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: $back-color-main;
-        background-color: $blur-color;
-
-        @media screen and (max-width: 735px) {
-          width: 100%;
-          height: 100%;
+      & > div:last-child {
+        visibility: hidden;
+        position: absolute;
+        top: 0px;
+      }
+    }
+    &:hover {
+      & > a {
+        & > div:last-child {
           display: inline-flex;
+          flex-direction: column;
           justify-content: center;
           align-items: center;
-        }
-
-        @media screen and (min-width: 736px) {
           width: 100%;
           height: 100%;
-          display: inline-flex;
-          justify-content: center;
-          align-items: center;
-
-          font-size: 20px;
+          background-color: $blur-color;
+          visibility: visible;
+          & > span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 8vw;
+            color: $font-color-main;
+            display: block;
+          }
+          // z-index: 10;
         }
       }
     }
   }
+
+  @media screen and (max-width: $media-tablet) {
+    grid-template-rows: repeat(3, 32.6vw);
+    grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 0.1vw * 3));
+    row-gap: 0.1vw;
+    column-gap: 0.1vw;
+    width: 100%;
+  }
+
+  @media screen and (max-width: $media-phone) {
+    // grid-template-rows: repeat(3, 20.6vw);
+    grid-template-rows: repeat(auto-fill, minmax(110px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
+
+    // grid-template-columns: repeat(3, 20.6vw);
+    row-gap: 0.1vw;
+    column-gap: 0.1vw;
+  }
 }
+
+// .userContentsEachBlock {
+//   position: relative;
+//   border: 1px solid $back-color-main;
+
+//   image {
+//     width: 100%;
+//     height: 100%;
+//   }
+
+//   &:hover {
+//     & > a {
+//       .hiddenContentsTitle {
+//         visibility: visible;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//         color: $back-color-main;
+//         background-color: $blur-color;
+
+//         @media screen and (max-width: 735px) {
+//           width: 100%;
+//           height: 100%;
+//           display: inline-flex;
+//           justify-content: center;
+//           align-items: center;
+//         }
+
+//         @media screen and (min-width: 736px) {
+//           width: 100%;
+//           height: 100%;
+//           display: inline-flex;
+//           justify-content: center;
+//           align-items: center;
+
+//           font-size: 20px;
+//         }
+//       }
+//     }
+//   }
+// }
 
 .hiddenContentsTitle {
   top: 0px;
