--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -371,3 +371,60 @@
     }
   }
 }
+
+.crewMainPageContentsContainer {
+  display: grid;
+  grid-template-rows: repeat(3, 320px);
+  grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 0.1vw * 3));
+  row-gap: 1.2vw;
+  column-gap: 1.2vw;
+  width: 100%;
+  margin-top: 44px;
+
+  & > a {
+    width: 100%;
+    height: 100%;
+    text-decoration-line: none !important;
+  }
+}
+
+.crewMainPageEachContents {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid $back-color-main;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+
+  & > div {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    & > div {
+      margin: 20px 20px 0px 0px;
+    }
+  }
+
+  & > h2 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 99%;
+    background-color: white;
+    padding: 2rem;
+  }
+
+  & > h3 {
+    margin: 0px;
+    position: absolute;
+    bottom: 20px;
+  }
+
+  &:hover {
+    border: 2px solid $font-color-main;
+  }
+}
