--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -374,7 +374,7 @@
 
 .crewMainPageContentsContainer {
   display: grid;
-  grid-template-rows: repeat(3, 320px);
+  // grid-template-rows: repeat(3, 320px);
   grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 0.1vw * 3));
   row-gap: 1.2vw;
   column-gap: 1.2vw;
@@ -385,6 +385,12 @@
     width: 100%;
     height: 100%;
     text-decoration-line: none !important;
+  }
+
+  @media screen and (max-width: $media-phone) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 
@@ -399,6 +405,9 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
+  min-height: 560px;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   & > div {
     width: 100%;
@@ -406,6 +415,10 @@
     justify-content: flex-end;
     & > div {
       margin: 20px 20px 0px 0px;
+    }
+
+    @media screen and (max-width: $media-phone) {
+      height: 80vh;
     }
   }
 
