--- a/styles/column/ColumnPage.module.scss
+++ b/styles/column/ColumnPage.module.scss
@@ -4,10 +4,9 @@
 
 .cardContainer {
   display: grid;
-  grid-template-columns: repeat(2, calc((100%) / 2 - 12px - 0.1vw * 2));
+  grid-template-columns: repeat(2, calc((100%) / 2 - 1.2vw * 1));
   row-gap: 1.2vw;
   column-gap: 1.2vw;
-  width: 100%;
   margin-top: 44px;
 }
 
