--- a/styles/common/Util.module.scss
+++ b/styles/common/Util.module.scss
@@ -84,7 +84,7 @@ $delayandduration: 4;
 .sectionMain {
   margin: 0 auto;
   height: 100%;
-  width: 100%;
+  // width: 100%;
   min-height: calc(100vh - 200px - 25px);
   //min-height: calc(100vh + 20px);
   max-width: 1024px;
