--- a/styles/crew/CrewPage.module.scss
+++ b/styles/crew/CrewPage.module.scss
@@ -375,7 +375,7 @@
 .crewMainPageContentsContainer {
   display: grid;
   // grid-template-rows: repeat(3, 320px);
-  grid-template-columns: repeat(3, calc((100%) / 3 - 12px - 1.2vw * 2));
+  grid-template-columns: repeat(3, calc((100%) / 3 - 1.2vw));
   row-gap: 1.2vw;
   column-gap: 1.2vw;
   width: 100%;
