--- a/styles/talk/TalkPage.module.scss
+++ b/styles/talk/TalkPage.module.scss
@@ -30,7 +30,7 @@
   -webkit-box-orient: vertical;
   word-break: break-all;
   word-wrap: break-word;
-  word-break: break-word;
+  // word-break: break-word;
 
   @media screen and (max-width: $media-phone) {
     // width: calc(100% - 120px - 6px);
